[gd_scene load_steps=16 format=3 uid="uid://1wa5asdgcj5u"]

[ext_resource type="Script" path="res://Intro Folder/introduction.gd" id="1_v10ru"]
[ext_resource type="Texture2D" uid="uid://dd5o54afaw7vm" path="res://Intro Folder/RiaImage.png" id="2_fp6x3"]
[ext_resource type="Texture2D" uid="uid://br65y44boqyd2" path="res://Intro Folder/MadelineImage.png" id="3_0h5s4"]
[ext_resource type="Texture2D" uid="uid://c4ryi3q1xbvo7" path="res://Intro Folder/Adin.png" id="4_51ss0"]
[ext_resource type="Texture2D" uid="uid://t7puo6mhhrcn" path="res://Intro Folder/tempBattleBackground.jpg" id="5_c6tih"]
[ext_resource type="Texture2D" uid="uid://21manh0tik3j" path="res://Intro Folder/riaroom.png" id="5_eajcy"]
[ext_resource type="FontFile" uid="uid://bmn8pnubjlerl" path="res://Intro Folder/Gallagher.ttf" id="7_igwvl"]
[ext_resource type="Texture2D" uid="uid://dqjuwch08wxjd" path="res://Intro Folder/New Piskel-1.png (1).png" id="7_lkj6a"]
[ext_resource type="Texture2D" uid="uid://dj7mxgtbwtbhs" path="res://Intro Folder/New Piskel-1.png.png" id="8_wqh68"]
[ext_resource type="AudioStream" uid="uid://bis2bmastm1jv" path="res://Intro Folder/RiaRoom.mp3" id="9_mhyjj"]
[ext_resource type="Texture2D" uid="uid://dj2eyciyot1m6" path="res://Intro Folder/RiaHead.png" id="10_mdyey"]
[ext_resource type="Texture2D" uid="uid://cx7rfn84g3px5" path="res://Intro Folder/MadelineHead.png" id="11_pcd1f"]
[ext_resource type="Texture2D" uid="uid://b1w3g66x58g" path="res://Intro Folder/AdinHead.png" id="12_27obq"]
[ext_resource type="Texture2D" uid="uid://dohcm0lutq82s" path="res://Intro Folder/stageroomdark.png" id="14_u63lg"]
[ext_resource type="Texture2D" uid="uid://bat6gmamol1rx" path="res://Intro Folder/stageroomlight.png" id="15_xb58e"]

[node name="Introduction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v10ru")

[node name="Read_Out_Diologue_Timer" type="Timer" parent="."]

[node name="Ria_Sprite" type="Sprite2D" parent="."]
position = Vector2(192, 423)
scale = Vector2(0.187344, 0.191258)
texture = ExtResource("2_fp6x3")

[node name="Madeline_Sprite" type="Sprite2D" parent="."]
top_level = true
position = Vector2(977, 421.863)
scale = Vector2(-0.212922, 0.234839)
texture = ExtResource("3_0h5s4")

[node name="Adin_Sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(972, 420)
scale = Vector2(0.2, 0.206)
texture = ExtResource("4_51ss0")
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
z_index = -100
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.186, 1.186)
texture = ExtResource("5_c6tih")

[node name="Control" type="Control" parent="."]
top_level = true
anchors_preset = 0
offset_left = 461.0
offset_top = 335.0
offset_right = 501.0
offset_bottom = 375.0
scale = Vector2(4.48139, 2.90277)

[node name="PersonLabel" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 1
layout_mode = 0
offset_left = -18.5211
offset_top = 9.64596
offset_right = 21.4789
offset_bottom = 45.646
scale = Vector2(0.1606, 0.474476)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_igwvl")
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(-12.3, 18.4)
scale = Vector2(0.201, 0.31)
texture = ExtResource("7_lkj6a")

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_left = 314.0
offset_top = 404.0
offset_right = 354.0
offset_bottom = 444.0

[node name="Label" type="Label" parent="Control2"]
top_level = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 309.0
offset_top = 435.0
offset_right = 718.0
offset_bottom = 570.0
scale = Vector2(1.35595, 1.32416)
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_igwvl")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="Control2"]
position = Vector2(262, 117.5)
scale = Vector2(0.9, 0.9)
texture = ExtResource("8_wqh68")

[node name="RiaRoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mhyjj")
bus = &"BGM"

[node name="RiaHead" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(333, 386.5)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_mdyey")

[node name="MadelineHead" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(333, 386.5)
scale = Vector2(0.3, 0.3)
texture = ExtResource("11_pcd1f")

[node name="AdinHead" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(333, 386.5)
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_27obq")

[node name="RiaRoomBackground" type="Sprite2D" parent="."]
show_behind_parent = true
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_eajcy")
centered = false

[node name="StageRoomBackground2" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
scale = Vector2(0.9, 0.9)
texture = ExtResource("14_u63lg")
centered = false

[node name="LitStageBackground" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
scale = Vector2(0.9, 0.9)
texture = ExtResource("15_xb58e")
centered = false

[connection signal="timeout" from="Read_Out_Diologue_Timer" to="." method="_on_read_out_diologue_timer_timeout"]
